--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
    
     <h1>Home page</h1>
-    <a href="http://localhost:4000/next" >Go on next page</a>
+    <a href="https://trial-project.onrender.com/next" >Go on next page</a>
 
 </body>
 </html>
